2008-03-11  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader.dll:
	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
	* src/BuzzMachineLoader/BuzzMDKHelper.cpp:
	* src/BuzzMachineLoader/BuzzMDKHelper.h:
	* src/BuzzMachineLoader/CMachine.h:
	  Remove try{} catch. Always call AttributesChanged during init.
	  A bit of MDK work.

2008-03-10  Stefan Kost  <ensonic@users.sf.net>

	* configure.ac:
	* src/BuzzMachineLoader/MachineInterface.h:
	* src/BuzzMachineLoader/Makefile.am:
	  Revert ABI breake in machineinterface. Use CXXFLAGS to supress warning
	  instead.

2008-03-09  Stefan Kost  <ensonic@users.sf.net>

	* NEWS:
	* configure.ac:
	  Prepare the release.

2008-02-27  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader/BuzzMDKHelper.cpp:
	* src/BuzzMachineLoader/BuzzMachineCallbacks.cpp:
	  Make it actually buildable :/

2008-02-26  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader/BuzzMDKHelper.cpp:
	* src/BuzzMachineLoader/BuzzMachineCallbacks.cpp:
	  Comment and logging changes.

2008-02-23  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	* dllwrapper1/wine/module.c:
	* dllwrapper1/wine/pe_image.c:
	* dllwrapper1/wine/win32.c:
	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
	* src/bmltest_info.c:
	* tests/testmachine.sh:
	  More logging tweaks. Added work arounds to get some borked machines
	  working. Gather info about remaining issues.

2008-02-23  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	* dllwrapper1/wine/module.c:
	* dllwrapper1/wine/pe_image.c:
	* dllwrapper1/wine/win32.c:
	* src/BuzzMachineLoader.dll:
	* src/BuzzMachineLoader/BuzzMachineCallbacksPre12.cpp:
	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
	* tests/testmachine.sh:
	  Tune logging to be a bit less verbose. Implement more wrapped API, got
	  more machines working.

2008-02-19  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
	  Reorder init calls.

	* src/BuzzMachineLoader/BuzzMachineCallbacks.h: