@@ -1,3 +1,11 @@
+2008-03-12  Stefan Kost  <ensonic@users.sf.net>
+
+	* TODO:
+	  Update test findings.
+
+	* dllwrapper1/wine/pe_image.c:
+	  Some tracing fixes.
+
 2008-03-11  Stefan Kost  <ensonic@users.sf.net>
 
 	* src/BuzzMachineLoader.dll:
